[package]
name = "trust-bulkupload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
async-trait = "0.1"
url = "2.2"
rand = "0.8"
log = "0.4"
simplelog = "0.10"